--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -6,9 +6,9 @@
         <div class="form-group mb-0">
           <div class="input-group input-group-alternative input-group-merge">
             <div class="input-group-prepend">
-              <span class="input-group-text"><i class="fas fa-search"></i></span>
+              {% comment %} <span class="input-group-text"><i class="fas fa-search"></i></span> {% endcomment %}
             </div>
-            <input class="form-control" placeholder="Search" type="text">
+            {% comment %} <input class="form-control" placeholder="Search" type="text"> {% endcomment %}
           </div>
         </div>
         <button type="button" class="close" data-action="search-close" data-target="#navbar-search-main" aria-label="Close">
