--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -18,7 +18,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if 'icons' in segment %} active {% endif %}" href="/icons.html">
+            <a class="nav-link {% if 'cliente' in segment %} active {% endif %}" href="/cliente.html">
               <i class="ni ni-planet text-orange"></i>
               <span class="nav-link-text">Cliente</span>
             </a>
