--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -19,7 +19,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link {% if 'cliente' in segment %} active {% endif %}" href="/cliente.html">
-              <i class="ni ni-planet text-orange"></i>
+              <i class="ni ni-single-02"></i>
               <span class="nav-link-text">Cliente</span>
             </a>
           </li>
