--- a/apps/templates/home/cliente.html
+++ b/apps/templates/home/cliente.html
@@ -43,7 +43,7 @@
               <thead class="thead-dark">
                 <tr>
                   <th scope="col" class="sort" data-sort="nome">Nome</th>
-                  <th scope="col" class="sort" data-sort="cpf">CPF</th>
+                  <th scope="col" class="sort" data-sort="cpf">CPFs  {{cliente}}</th>
                   <th scope="col" class="sort" data-sort="endereco">Endereço</th>
                   <th scope="col" class="sort" data-sort="endereco">Editar</th>
                   <th scope="col" class="sort" data-sort="endereco">Excluir</th>
