--- a/apps/templates/home/cliente.html
+++ b/apps/templates/home/cliente.html
@@ -42,7 +42,7 @@
             <table class="table align-items-center table-dark table-flush">
               <thead class="thead-dark">
                 <tr>
-                  <th scope="col" class="sort" data-sort="nome">Nome</th>
+                  <th scope="col" class="sort" data-sort="nome">Nomes </th>
                   <th scope="col" class="sort" data-sort="cpf">CPFs  {{cliente}}</th>
                   <th scope="col" class="sort" data-sort="endereco">Endereço</th>
                   <th scope="col" class="sort" data-sort="endereco">Editar</th>
