--- a/apps/templates/home/cliente.html
+++ b/apps/templates/home/cliente.html
@@ -9,7 +9,7 @@
       <div class="header-body">
         <div class="row align-items-center py-4">
           <div class="col-lg-6 col-7">
-            <h6 class="h2 text-white d-inline-block mb-0">Clientesddd</h6>
+            <h6 class="h2 text-white d-inline-block mb-0">Clientes</h6>
             {{cliente}}
             
             <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
@@ -43,7 +43,7 @@
               <thead class="thead-dark">
                 <tr>
                   <th scope="col" class="sort" data-sort="nome">Nomes </th>
-                  <th scope="col" class="sort" data-sort="cpf">CPFs  {{cliente}}</th>
+                  <th scope="col" class="sort" data-sort="cpf">CPF</th>
                   <th scope="col" class="sort" data-sort="endereco">Endereço</th>
                   <th scope="col" class="sort" data-sort="endereco">Editar</th>
                   <th scope="col" class="sort" data-sort="endereco">Excluir</th>
