--- a/apps/templates/home/cliente.html
+++ b/apps/templates/home/cliente.html
@@ -44,6 +44,7 @@
                   <th scope="col" class="sort" data-sort="nome">Nomes </th>
                   <th scope="col" class="sort" data-sort="cpf">CPF</th>
                   <th scope="col" class="sort" data-sort="endereco">Endereço</th>
+                  <th scope="col" class="sort" data-sort="endereco">Telefone</th>
                   <th scope="col" class="sort" data-sort="endereco">Editar</th>
                   <th scope="col" class="sort" data-sort="endereco">Excluir</th>
                 </tr>
@@ -59,6 +60,9 @@
                   </td>
                   <td>
                     {{cliente.logradouro}}
+                  </td>
+                  <td>
+                    {{cliente.telefone}}
                   </td>
                   <td>
                     </div>
