--- a/apps/templates/home/cliente-registro.html
+++ b/apps/templates/home/cliente-registro.html
@@ -15,14 +15,10 @@
                 <li class="breadcrumb-item">
                   <a href="#"><i class="fas fa-home"></i></a>
                 </li>
-                <li class="breadcrumb-item"><a href="#">Lista</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Tables</li>
+                <li class="breadcrumb-item"><a href="/cliente.html">Lista</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Clientes</li>
 
             </nav>
-          </div>
-          <div class="col-lg-6 col-5 text-right">
-            <a href="#" class="btn btn-sm btn-neutral">New</a>
-            <a href="#" class="btn btn-sm btn-neutral">Filters</a>
           </div>
         </div>
       </div>
