--- a/apps/templates/home/cliente.html
+++ b/apps/templates/home/cliente.html
@@ -21,7 +21,7 @@
             </nav>
           </div>
           <div class="col-lg-6 col-5 text-right">
-            <a href="/cliente-registro.html" class="btn btn-sm btn-neutral">Novo</a>
+            <a href="/cliente-registro/" class="btn btn-sm btn-neutral">Novo</a>
           </div>
         </div>
       </div>
@@ -65,7 +65,17 @@
                     {{cliente.telefone}}
                   </td>
                   <td>
-                    </div>
+                    <span class="badge badge-dot mr-4">
+                      <i class="bg-warning"></i>
+                      {% comment %} <span class="status"></span> {% endcomment %}
+                    </span>
+                  </td>
+                  <td>
+                    <span class="badge badge-dot mr-4">
+                      <a href="delete/{{cliente.id}}">Excluir</a>
+                      <i class="bg-warning"></i>
+                      {% comment %} <span class="status"></span> {% endcomment %}
+                    </span>
                   </td>
                   {% endfor %}
               </tbody>
