add forms  wdiget

--- a/apps/templates/home/cliente-registro.html
+++ b/apps/templates/home/cliente-registro.html
@@ -46,14 +46,9 @@
                 <div class="col-md-4">
                   <div class="form-group">
                     <label class="form-control-label" for="example3cols2Input"
-                      >One of three cols</label
+                      >Telefone</label
                     >
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="example3cols2Input"
-                      placeholder="One of three cols"
-                    />
+                    {{ form.telefone }}
                   </div>
                 </div>
                 <div class="col-md-4">
