--- a/apps/templates/home/cliente-registro.html
+++ b/apps/templates/home/cliente-registro.html
@@ -32,7 +32,7 @@
         <div class="card bg-default shadow">
           <div class="card-header bg-transparent border-0">
             <div class="card-body">
-            <form action="{% url 'home:cadastrar_cliente' %}" method="post">
+            <form action="" method="post">
               {% csrf_token %}
               <div class="row">
                 <div class="col-md-4">
