--- a/apps/templates/home/cliente.html
+++ b/apps/templates/home/cliente.html
@@ -66,6 +66,7 @@
                   </td>
                   <td>
                     <span class="badge badge-dot mr-4">
+                      <a href="editar/{{cliente.id}}">Editar</a>
                       <i class="bg-warning"></i>
                       {% comment %} <span class="status"></span> {% endcomment %}
                     </span>
